# CoinTracker

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test.ipynb
alembic/: env.py
alembic/versions/: 7d053aab80ae_add_author.py  9590fa7492d4_initial_migration.py  b3dfa7f94d42_add_twitter_id.py  bae0d870deb5_add_trades.py
app/: crud.py  database.py  main.py  models.py  routes.py  scheduler.py  schemas.py  settings.py  trading_simulation.py  tweet_analysis.py
app/collectors/scrapestorm/: api_client.py
app/llm/: classification.py
app/static/js/: main.js  trading_simulation.js
app/templates/: index.html  trading_simulation.html
