[project]
name = "cointracker"
version = "0.1.0"
description = ""
authors = [
    {name = "borislav",email = "b.novikov@prosw-team.com"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "aiohttp (>=3.12.13,<4.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-openai (>=0.3.27,<0.4.0)",
    "requests (>=2.32.4,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "uvicorn[standard] (>=0.29.0,<0.30.0)",
    "psycopg2-binary (>=2.9.9,<3.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "Jinja2 (>=3.1.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

